# PaddleOCR_OpenVINO_CPP

./: CMakeLists.txt  README.md  README_EN.md  cli.cc  readme.txt  readme_ch.md
docs/: windows_vs2019_build.md  windows_vs2019_build_en.md
include/: args.h  data_saver.h  ocr_det.h  ocr_det_openvino.h  ocr_interface.h  ocr_rec.h  ocr_rec_openvino.h  paddleocr.h  postprocess_op.h  preprocess_op.h  utility.h
src/: args.cpp  data_saver.cpp  main.cpp  main_openvino.cpp  ocr_det.cpp  ocr_det_openvino.cpp  ocr_det_openvino_backup.cpp  ocr_interface.cpp  ocr_rec.cpp  ocr_rec_openvino.cpp  paddleocr.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
src/api/models/: text_detection.cc  text_detection.h  text_recognition.cc  text_recognition.h
src/api/pipelines/: ocr.cc  ocr.h
src/base/: base_batch_sampler.cc  base_batch_sampler.h  base_cv_result.h  base_pipeline.cc  base_pipeline.h  base_predictor.cc  base_predictor.h
src/common/: image_batch_sampler.cc  image_batch_sampler.h  openvino_infer.cc  openvino_infer.h  processors.cc  processors.h  static_infer.cc  static_infer.h  thread_pool.cc  thread_pool.h
src/configs/: OCR.yaml
src/modules/text_detection/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/modules/text_recognition/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/pipelines/ocr/: pipeline.cc  pipeline.h  result.cc  result.h
src/utils/: args.cc  args.h  func_register.h  ilogger.cc  ilogger.h  openvino_option.cc  openvino_option.h  pp_option.cc  pp_option.h  simple_config.cc  simple_config.h  simple_logger.h  status.h  utility.cc  utility.h  yaml_config.cc  yaml_config.h
tools/: build.sh
